--- a/internal/newTab/main.html
+++ b/internal/newTab/main.html
@@ -1,101 +1,189 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-        <!--
-    Incognito
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-        -->
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>New Hypertab</title>
-		<link rel="stylesheet" href="/css/css.css" />
-	</head>
 
-	<body id="body">
-		<script src="/js/xor.js"></script>
-		<script src="/js/bookmarks.js"></script>
-		<script src="/uv/uv.bundle.js"></script>
-		<script src="/uv/uv.config.js"></script>
-		<!-- <script src="/js/weather.js"></script> -->
-		<script>
-			// const ip = "<?php echo $_SERVER['HTTP_X_FORWARDED_FOR'] ?>";
-		</script>
-		<div class="bookmarks"></div>
-		<div class="info">
-			<div id="weather">
-				<!--   Weather Widget in TOP RIGHT   -->
-				<!-- <h2 id="winfo">Loading...</h2>
-            <h2 id="alerts"></h2> -->
-			</div>
-		</div>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>New Tab</title>
+    <link rel="stylesheet" href="storage/assets/css/proxy2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Outfit:wght@100..900&display=swap');
 
-		<div class="center">
-			<h1 id="headtxt">Hypertabs</h1>
-			<forum
-				id="input"
-				onkeydown="if(event.key == 'Enter'){location.href=`${__uv$config.prefix}${xor.encode(window.parent.searchEngine+document.getElementById('inputb').value)}`}"
-				onsubmit="location.href=`${__uv$config.prefix}${xor.encode(window.parent.searchEngine+document.getElementById('inputb').value)}`"
-			>
-				<input id="inputb" placeholder="Search....." />
-				<input
-					id="inputimg"
-					onclick="location.href=`${__uv$config.prefix}${xor.encode(window.parent.searchEngine+document.getElementById('inputb').value)}`"
-					type="image"
-					value="Login"
-					src="/search.svg"
-					height="24"
-					width="24"
-				/>
-				<input type="submit" style="display: none" />
-			</forum>
-			<div class="btns">
-				<!-- idea: maybe include __uv$config.prefix with xor.encode -->
-				<div
-					onclick="location.href=__uv$config.prefix+xor.encode('https://music.youtube.com')"
-					class="crm"
-				>
-					<img class="icn" src="/bookmark.png" />
-					<a class="btn">Music</a>
-				</div>
-				<div onclick="location.href='/c.html'" class="crm">
-					<img class="icn" src="/icon.png" />
-					<a class="btn">Contributors</a>
-				</div>
-				<div
-					onclick="location.href=__uv$config.prefix+xor.encode('https://discord.gg/J3VPy5Vy8x')"
-					class="crm"
-				>
-					<img class="icn" src="/dcd.png" />
-					<a class="btn">Join Discord</a>
-				</div>
-			</div>
-		</div>
-        <!--
-  _____                   _                _     _                                                                      
- |  __ \                 | |              | |   | |                                                                     
- | |__) |   ___    _ __  | |_    ___    __| |   | |__    _   _                                                          
- |  ___/   / _ \  | '__| | __|  / _ \  / _` |   | '_ \  | | | |                                                         
- | |      | (_) | | |    | |_  |  __/ | (_| |   | |_) | | |_| |                                                         
- |_|       \___/  |_|     \__|  \___|  \__,_|   |_.__/   \__, |                                                         
-                                                          __/ |                                                         
-                                                         |___/                                                          
-                                _     _                     _       _   _          _                               _    
-     /\                        | |   | |                   | |     | \ | |        | |                             | |   
-    /  \     _ __ ___     ___  | |_  | |__    _   _   ___  | |_    |  \| |   ___  | |_  __      __   ___    _ __  | | __
-   / /\ \   | '_ ` _ \   / _ \ | __| | '_ \  | | | | / __| | __|   | . ` |  / _ \ | __| \ \ /\ / /  / _ \  | '__| | |/ /
-  / ____ \  | | | | | | |  __/ | |_  | | | | | |_| | \__ \ | |_    | |\  | |  __/ | |_   \ V  V /  | (_) | | |    |   < 
- /_/    \_\ |_| |_| |_|  \___|  \__| |_| |_|  \__, | |___/  \__|   |_| \_|  \___|  \__|   \_/\_/    \___/  |_|    |_|\_\
-                                               __/ |                                                                    
-                                              |___/                                                                                                                  
-        -->
-	</body>
+body {
+    color: #fff;
+    background-color: #0A1D37;
+    text-align: center;
+    font-family: "Outfit", sans-serif;
+}
+
+.god-rays {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 550px;
+    --stripes: repeating-linear-gradient( 100deg, rgba(20, 40, 60, 0.8) 0%, rgba(20, 40, 60, 0.8) 7%, transparent 10%, transparent 12%, rgba(20, 40, 60, 0.8) 16% );
+    --rays: repeating-linear-gradient( 100deg, rgba(30, 50, 90, 0.9) 10%, rgba(20, 40, 80, 0.9) 15%, rgba(30, 50, 90, 0.9) 20%, rgba(20, 40, 80, 0.9) 25%, rgba(30, 50, 90, 0.9) 30% );
+    background-image: var(--stripes), var(--rays);
+    background-size: 300%, 200%;
+    background-position: 50% 50%, 50% 50%;
+    animation: fadeIn 2s ease;
+    mask-image: radial-gradient(ellipse at 100% 0%, rgba(255, 255, 255, 0) 40%, transparent 70%);
+    -webkit-mask-image: radial-gradient(ellipse at 100% 0%, white 40%, transparent 70%);
+    pointer-events: none;
+    z-index: -1;
+}
+
+.god-rays::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: var(--stripes), var(--rays);
+    background-size: 200%, 100%;
+    animation: god-rays 40s linear infinite;
+    background-attachment: fixed;
+    mix-blend-mode: difference;
+}
+
+#search-container {
+    margin-top: 5px;
+}
+
+.search-bar-home {
+    padding: 20px;
+    width: 400px;
+    border: none;
+    background-color: #141414;
+    border-radius: 50px;
+    font-family: "Outfit", sans-serif;
+    outline: none;
+    margin: 0;
+    color: #fff;
+    transition: 0.3s;
+}
+
+input {
+    width: 100%;
+    max-width: 400px;
+    padding: 10px 20px;
+    margin: 10px 0;
+    font-size: 16px;
+    border: none;
+    color: #fff;
+    background-color: #141414;
+    border-radius: 50px;
+}
+
+.search-button {
+    padding: 20px 20px;
+    background-color: #141414;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 50px;
+    margin: 5px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.search-button:hover {
+    background-color: #555;
+}
+
+/* Time Display Style */
+#time {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    color: white;
+    font-family: "Outfit", sans-serif;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+    </style>
+</head>
+<body>
+    <div class="god-rays"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>Pete Prօxy</h1>
+    <p id="dynamicParagraph">(TEXT)</p>
+
+    <div id="search-container">
+        <form id="uv-form">
+            <input id="uv-search-engine" value="https://duckduckgo.com/?q=%s" type="hidden"/>
+            <input id="uv-address" type="text" class="search-bar-home" placeholder="Search or enter a URL" />
+            <button class="search-button" onclick="submitSearch()">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+
+        <div class="desc left-margin">
+            <p id="uv-error"></p>
+            <pre id="uv-error-code"></pre>
+        </div>
+    </div>
+
+    <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
+        <a href="/static/embed.html#https://tiktok.com" style="display: inline-block;">
+            <img src="/storage/ag/a/tiktok/IMG_5335.png" style="width: 30px; height: 30px; border-radius: 50%; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+        </a>
+        <a href="/static/embed.html#https://twitch.tv" style="display: inline-block;">
+            <img src="/storage/ag/a/twitch/IMG_5336.png" style="width: 30px; height: 30px; border-radius: 50%; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+        </a>
+        <a href="/static/embed.html#https://google.com" style="display: inline-block;">
+            <img src="/storage/ag/a/google/IMG_5324.webp" style="width: 30px; height: 30px; border-radius: 50%; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+        </a>
+        <a href="/static/embed.html#https://now.gg" style="display: inline-block;">
+            <img src="/storage/ag/a/nowgg/IMG_5325.png" style="width: 30px; height: 30px; border-radius: 50%; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+        </a>
+    </div>
+
+    <!-- Time Display Element -->
+    <div id="time"></div>
+
+    <script src="/static/uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/register-sw.js" defer></script>
+    <script src="/static/search.js" defer></script>
+    <script src="/static/index.js" defer></script>
+
+    <script>
+        const phrases = [
+            "Pete Zah best unblocked games ever!", 
+            "https://petezahgames.com", 
+            "Credits to Brunys and US4 for the proxy setup, brunysixlwork.github.io and voucan-us4.github.io:)", 
+            "just had a major update ¯\\_(ツ)_/¯", 
+            "Roblox should now work my eskibidi sigmets", 
+            "IVE EDGED TO Pete Zah -idkiguess",
+        ];
+
+        const paragraph = document.getElementById('dynamicParagraph');
+
+        function changeText() {
+            const randomPhrase = phrases[Math.floor(Math.random() * phrases.length)];
+            paragraph.textContent = randomPhrase;
+        }
+
+        paragraph.addEventListener('click', changeText);
+        window.onload = changeText;
+
+        // Function to update time
+        function updateTime() {
+            const timeElement = document.getElementById("time");
+            const now = new Date();
+            const hours = now.getHours().toString().padStart(2, '0');
+            const minutes = now.getMinutes().toString().padStart(2, '0');
+            const seconds = now.getSeconds().toString().padStart(2, '0');
+            timeElement.textContent = `${hours}:${minutes}:${seconds}`;
+        }
+
+        // Update time every second
+        setInterval(updateTime, 1000);
+    </script>
+</body>
 </html>
