--- a/index.html
+++ b/index.html
@@ -2,26 +2,14 @@
 <html lang='en' class='dark-theme'>
 
 <head>
-        <!--
-    Hypertabs
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-        -->
+
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-  <meta name="description" content="Hypertabs" >
+  <meta name="description" content="Game on!" >
   <!-- Open Graph tags -->
-  <meta property="og:title" content="Hypertabs">
-  <meta property="og:image" content="/icon.png">
+  <meta property="og:title" content="PeteZah | Proxy">
+  <meta property="og:image" content="/storage/images/logo-png-removebg-preview.png">
   <!-- End Open Graph Tags -->
   <meta name="googlebot" content="index, follow, snippet" />
   <meta name="theme-color" content="#B48EAD">
@@ -30,12 +18,12 @@
   <link href='css/chrome-tabs-dark-theme.css' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
   <link rel="manifest" href="manifest.json" />
-  <script src="/uv/uv.bundle.js"></script>
-  <script src="/uv/uv.config.js"></script>
-  <script src="/bare-client.js"></script>
+  <script src="/static/uv/uv.bundle.js"></script>
+  <script src="/static/uv/uv.config.js"></script>
+  <script src="bare-client.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-		navigator.serviceWorker.register('/uv/sw.js', {
+		navigator.serviceWorker.register('/static/sw.js', {
 			scope: __uv$config.prefix,
 			updateViaCache: 'none',
 		});
@@ -168,7 +156,7 @@
         <a class="pointer tooldivd" onclick='toggleId("searchDrop", "optionsdrop");'>back</a>
         <div class="dividerext"></div>
         <a class="pointer th">Type the url plus search scheme of your engine.<input class="aa" id='customSearch'
-            type='text' placeholder="https://google.com/search?q=" /></a>
+            type='text' placeholder="https://duckduckgo.com/search?q=" /></a>
         <a class="pointer bt"
           onclick='localStorage.setItem("searchEngine",document.getElementById("customSearch").value);toggleId("searchDrop");searchEngine=document.getElementById("customSearch").value'>Apply</a>
         <a></a>
@@ -211,24 +199,7 @@
 
     <script>document.cookie = "oldsmobile=badcar"</script>
   </div>
-        <!--
-  _____                   _                _     _                                                                      
- |  __ \                 | |              | |   | |                                                                     
- | |__) |   ___    _ __  | |_    ___    __| |   | |__    _   _                                                          
- |  ___/   / _ \  | '__| | __|  / _ \  / _` |   | '_ \  | | | |                                                         
- | |      | (_) | | |    | |_  |  __/ | (_| |   | |_) | | |_| |                                                         
- |_|       \___/  |_|     \__|  \___|  \__,_|   |_.__/   \__, |                                                         
-                                                          __/ |                                                         
-                                                         |___/                                                          
-                                _     _                     _       _   _          _                               _    
-     /\                        | |   | |                   | |     | \ | |        | |                             | |   
-    /  \     _ __ ___     ___  | |_  | |__    _   _   ___  | |_    |  \| |   ___  | |_  __      __   ___    _ __  | | __
-   / /\ \   | '_ ` _ \   / _ \ | __| | '_ \  | | | | / __| | __|   | . ` |  / _ \ | __| \ \ /\ / /  / _ \  | '__| | |/ /
-  / ____ \  | | | | | | |  __/ | |_  | | | | | |_| | \__ \ | |_    | |\  | |  __/ | |_   \ V  V /  | (_) | | |    |   < 
- /_/    \_\ |_| |_| |_|  \___|  \__| |_| |_|  \__, | |___/  \__|   |_| \_|  \___|  \__|   \_/\_/    \___/  |_|    |_|\_\
-                                               __/ |                                                                    
-                                              |___/                                                                                                                  
-        -->
+
 </body>
 
 </html>
